--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -11,8 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -29,10 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [i for i in range(1,51)]\n",
+    "print(l)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,10 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 120, 122, 124, 126, 128, 130, 132, 134, 136, 138, 140, 142, 144, 146, 148, 150, 152, 154, 156, 158, 160, 162, 164, 166, 168, 170, 172, 174, 176, 178, 180, 182, 184, 186, 188, 190, 192, 194, 196, 198, 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = [i for i in range(2,201) if i%2 == 0]\n",
+    "print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,8 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "a = np.array([[0.84062117, 0.48006452, 0.7876326 , 0.77109654],\n",
@@ -75,10 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.82207817, 0.00294891, 0.25690086, 0.57415108], [0.18233239, 0.43855482, 0.47780393, 0.37144431], [0.31202143, 0.08281818, 0.44719734, 0.11260363], [0.12706955, 0.46570612, 0.0469911, 0.00127745], [0.88383642, 0.92979573, 0.28502092, 0.80950262], [0.8904308, 0.43812476, 0.00439101, 0.19094288], [0.01900742, 0.3724211, 0.53120037, 0.07377189], [0.54019999, 0.01236794, 0.29581153, 0.21697148], [0.18529813, 0.14896177, 0.31043245, 0.7919055], [0.53315646, 0.9012152, 0.53908501, 0.64310015]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "#print(round(random.random(),8))\n",
+    "p = [[round(random.random(),8) for j in range(4)] for i in range(10)]\n",
+    "print(p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,10 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.82207817, 0.57415108, 0.88383642, 0.92979573, 0.80950262, 0.8904308, 0.53120037, 0.54019999, 0.7919055, 0.53315646, 0.9012152, 0.53908501, 0.64310015]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l4 = [j for i in p for j in i if j >= 0.5]\n",
+    "print(l4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,9 +161,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = np.array([[[0.55867166, 0.06210792, 0.08147297],\n",
     "        [0.82579068, 0.91512478, 0.06833034]],\n",
@@ -120,15 +191,38 @@
     "        [0.8694668 , 0.65669313, 0.10708681]],\n",
     "\n",
     "       [[0.07529684, 0.46470767, 0.47984544],\n",
-    "        [0.65368638, 0.14901286, 0.23760688]]])"
+    "        [0.65368638, 0.14901286, 0.23760688]]])\n",
+    "b.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = []\n",
+    "for i in range(5):\n",
+    "    q = []\n",
+    "    for j in range(2):\n",
+    "        r =[]\n",
+    "        for k in range(3):\n",
+    "            r.append(round(random.random(),8))\n",
+    "    \n",
+    "p.append(q.append(r))\n",
+    "\n",
+    "print(p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -153,10 +249,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sample_file_1.csv', 'sample_file_0.csv', 'sample_file_2.csv', 'sample_file_3.csv', 'sample_file_7.csv', 'sample_file_6.csv', 'sample_file_4.csv', 'sample_file_5.csv', 'sample_file_8.csv', 'sample_file_9.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = [f for f in os.listdir(\"/Users/valeriajimeno/Documents/datamex1019/module-1/lab-list-comprehensions/data\") if f.endswith('.csv')]\n",
+    "print(file)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,10 +276,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          0         1         2         3         4         5         6  \\\n",
+      "0  0.276827  0.260054  0.942397  0.113187  0.781355  0.475740  0.152061   \n",
+      "1  0.995885  0.158381  0.244274  0.962163  0.651900  0.930665  0.577190   \n",
+      "2  0.641917  0.821055  0.392437  0.782617  0.510762  0.428320  0.017324   \n",
+      "3  0.806532  0.569258  0.148175  0.809987  0.459632  0.735762  0.730664   \n",
+      "4  0.311185  0.501165  0.365979  0.782807  0.776795  0.797199  0.791946   \n",
+      "0  0.734751  0.195362  0.734309  0.598184  0.763433  0.263434  0.868066   \n",
+      "1  0.772607  0.445391  0.249642  0.787922  0.598583  0.827238  0.624126   \n",
+      "2  0.226428  0.268764  0.694262  0.622335  0.063843  0.122683  0.815625   \n",
+      "3  0.362748  0.495430  0.113876  0.594149  0.612522  0.625204  0.864050   \n",
+      "4  0.033415  0.340433  0.464971  0.363737  0.025815  0.434129  0.415163   \n",
+      "\n",
+      "          7         8         9        10        11        12        13  \\\n",
+      "0  0.250324  0.147078  0.162984  0.977025  0.509619  0.593212  0.911839   \n",
+      "1  0.087914  0.960261  0.580840  0.194616  0.661459  0.674085  0.049326   \n",
+      "2  0.680720  0.340412  0.462513  0.785776  0.251949  0.032847  0.995700   \n",
+      "3  0.934502  0.080322  0.763502  0.398504  0.027637  0.409665  0.942846   \n",
+      "4  0.847157  0.771811  0.233944  0.522344  0.053030  0.208551  0.824354   \n",
+      "0  0.058092  0.753502  0.587513  0.311608  0.178356  0.182922  0.147631   \n",
+      "1  0.601524  0.688753  0.338870  0.081595  0.471474  0.267443  0.453351   \n",
+      "2  0.584542  0.032594  0.589775  0.764350  0.650973  0.565705  0.691784   \n",
+      "3  0.260279  0.528873  0.168043  0.715929  0.677014  0.175735  0.632370   \n",
+      "4  0.892210  0.381701  0.415264  0.790801  0.696930  0.819751  0.944029   \n",
+      "\n",
+      "         14        15        16        17        18        19  \n",
+      "0  0.257645  0.386457  0.696932  0.069162  0.952291  0.286542  \n",
+      "1  0.785803  0.315645  0.495355  0.232135  0.549324  0.572232  \n",
+      "2  0.816563  0.735692  0.435998  0.430411  0.531757  0.489528  \n",
+      "3  0.133256  0.157158  0.929446  0.402791  0.685976  0.246594  \n",
+      "4  0.588567  0.604341  0.232964  0.229109  0.022881  0.479022  \n",
+      "0  0.391188  0.816049  0.749068  0.293260  0.937828  0.880858  \n",
+      "1  0.800716  0.045749  0.683793  0.389789  0.016787  0.503695  \n",
+      "2  0.265223  0.739031  0.560394  0.334802  0.517694  0.646110  \n",
+      "3  0.926715  0.085675  0.120525  0.141746  0.771144  0.489660  \n",
+      "4  0.869965  0.041723  0.819140  0.676051  0.109349  0.872947  \n"
+     ]
+    }
+   ],
+   "source": [
+    "data_sets = [pd.read_csv(os.path.join(\"/Users/valeriajimeno/Documents/datamex1019/module-1/lab-list-comprehensions/data\", f)) for f in file]\n",
+    "data = pd.concat(data_sets)\n",
+    "print(data.head(10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,10 +338,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 9, 12, 14, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame(data)\n",
+    "prueba = list(enumerate(list(data.median())))\n",
+    "m = [i[0] for i in prueba if i[1]<.48]\n",
+    "print(m)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,10 +367,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          0         1         2         3         4         5         6  \\\n",
+      "0  0.276827  0.260054  0.942397  0.113187  0.781355  0.475740  0.152061   \n",
+      "1  0.995885  0.158381  0.244274  0.962163  0.651900  0.930665  0.577190   \n",
+      "2  0.641917  0.821055  0.392437  0.782617  0.510762  0.428320  0.017324   \n",
+      "3  0.806532  0.569258  0.148175  0.809987  0.459632  0.735762  0.730664   \n",
+      "4  0.311185  0.501165  0.365979  0.782807  0.776795  0.797199  0.791946   \n",
+      "0  0.734751  0.195362  0.734309  0.598184  0.763433  0.263434  0.868066   \n",
+      "1  0.772607  0.445391  0.249642  0.787922  0.598583  0.827238  0.624126   \n",
+      "2  0.226428  0.268764  0.694262  0.622335  0.063843  0.122683  0.815625   \n",
+      "3  0.362748  0.495430  0.113876  0.594149  0.612522  0.625204  0.864050   \n",
+      "4  0.033415  0.340433  0.464971  0.363737  0.025815  0.434129  0.415163   \n",
+      "\n",
+      "          7         8         9    ...           11        12        13  \\\n",
+      "0  0.250324  0.147078  0.162984    ...     0.509619  0.593212  0.911839   \n",
+      "1  0.087914  0.960261  0.580840    ...     0.661459  0.674085  0.049326   \n",
+      "2  0.680720  0.340412  0.462513    ...     0.251949  0.032847  0.995700   \n",
+      "3  0.934502  0.080322  0.763502    ...     0.027637  0.409665  0.942846   \n",
+      "4  0.847157  0.771811  0.233944    ...     0.053030  0.208551  0.824354   \n",
+      "0  0.058092  0.753502  0.587513    ...     0.178356  0.182922  0.147631   \n",
+      "1  0.601524  0.688753  0.338870    ...     0.471474  0.267443  0.453351   \n",
+      "2  0.584542  0.032594  0.589775    ...     0.650973  0.565705  0.691784   \n",
+      "3  0.260279  0.528873  0.168043    ...     0.677014  0.175735  0.632370   \n",
+      "4  0.892210  0.381701  0.415264    ...     0.696930  0.819751  0.944029   \n",
+      "\n",
+      "         14        15        16        17        18        19        20  \n",
+      "0  0.257645  0.386457  0.696932  0.069162  0.952291  0.286542  0.186542  \n",
+      "1  0.785803  0.315645  0.495355  0.232135  0.549324  0.572232  0.472232  \n",
+      "2  0.816563  0.735692  0.435998  0.430411  0.531757  0.489528  0.389528  \n",
+      "3  0.133256  0.157158  0.929446  0.402791  0.685976  0.246594  0.146594  \n",
+      "4  0.588567  0.604341  0.232964  0.229109  0.022881  0.479022  0.379022  \n",
+      "0  0.391188  0.816049  0.749068  0.293260  0.937828  0.880858  0.780858  \n",
+      "1  0.800716  0.045749  0.683793  0.389789  0.016787  0.503695  0.403695  \n",
+      "2  0.265223  0.739031  0.560394  0.334802  0.517694  0.646110  0.546110  \n",
+      "3  0.926715  0.085675  0.120525  0.141746  0.771144  0.489660  0.389660  \n",
+      "4  0.869965  0.041723  0.819140  0.676051  0.109349  0.872947  0.772947  \n",
+      "\n",
+      "[10 rows x 21 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = [i-0.1 for i in data['19']]\n",
+    "data['20'] = t\n",
+    "print(data.head(10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -209,10 +431,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.73569233249685984, 0.73576186558112688, 0.7306642125209889, 0.73475108521287968, 0.73430923140011373, 0.74906808181834772, 0.73903129271113122, 0.71592902651579116, 0.70339304095807087, 0.70136199544194944, 0.73965610667174608, 0.70457501129597544, 0.73589417981474115, 0.73602949409040197, 0.70850981523012757, 0.74729627762917128, 0.73290248315315354, 0.71241695151247264, 0.71223975981197996, 0.73654163227830283, 0.70256570759882686, 0.72981157602588809, 0.72949805848780258, 0.72151470681851015, 0.71307810950918671, 0.73938330325705814, 0.7258310816144985, 0.73839820369832787, 0.71781667059579279, 0.70880423629168177, 0.73744491817494917, 0.72641211145380014, 0.7133695725698419, 0.74763231367558181, 0.72685450885319691, 0.71115849538767772, 0.70089308730502353, 0.72093756151291921, 0.73035537167339082, 0.7274869207330491, 0.71336907999303556, 0.70787383569771856, 0.70322481089044953, 0.71960963710316284, 0.72448633388856543, 0.7321533684342264, 0.73769464468274937, 0.71327142099876828, 0.70234817681809536, 0.70513346088709328, 0.72800063452082853, 0.71507999921776222, 0.73213334539708064, 0.71739643186705981]\n"
+     ]
+    }
+   ],
+   "source": [
+    "o = [i for col in data.values for i in col if i >0.7 and i<0.75]\n",
+    "print(o)"
+   ]
   }
  ],
  "metadata": {
@@ -231,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
