--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -114,14 +114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.82207817, 0.00294891, 0.25690086, 0.57415108], [0.18233239, 0.43855482, 0.47780393, 0.37144431], [0.31202143, 0.08281818, 0.44719734, 0.11260363], [0.12706955, 0.46570612, 0.0469911, 0.00127745], [0.88383642, 0.92979573, 0.28502092, 0.80950262], [0.8904308, 0.43812476, 0.00439101, 0.19094288], [0.01900742, 0.3724211, 0.53120037, 0.07377189], [0.54019999, 0.01236794, 0.29581153, 0.21697148], [0.18529813, 0.14896177, 0.31043245, 0.7919055], [0.53315646, 0.9012152, 0.53908501, 0.64310015]]\n"
+      "[[0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511], [0.18127511, 0.18127511, 0.18127511, 0.18127511]]\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "#print(round(random.random(),8))\n",
-    "p = [[round(random.random(),8) for j in range(4)] for i in range(10)]\n",
+    "c = (round(random.random(),8))\n",
+    "p = [[c for i in range(4)] for i in range(10)]\n",
     "print(p)"
    ]
   },
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -143,13 +144,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.82207817, 0.57415108, 0.88383642, 0.92979573, 0.80950262, 0.8904308, 0.53120037, 0.54019999, 0.7919055, 0.53315646, 0.9012152, 0.53908501, 0.64310015]\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
-    "l4 = [j for i in p for j in i if j >= 0.5]\n",
-    "print(l4)"
+    "\n",
+    "p =[]\n",
+    "for i in range(10):\n",
+    "    q = []\n",
+    "    for i in range(4):\n",
+    "        if c >= 0.5:\n",
+    "            q.append(c)\n",
+    "            p.append()\n",
+    "print(p)"
    ]
   },
   {
@@ -191,13 +199,12 @@
     "        [0.8694668 , 0.65669313, 0.10708681]],\n",
     "\n",
     "       [[0.07529684, 0.46470767, 0.47984544],\n",
-    "        [0.65368638, 0.14901286, 0.23760688]]])\n",
-    "b.shape"
+    "        [0.65368638, 0.14901286, 0.23760688]]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -206,22 +213,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[None]\n"
+      "[[[0.5577562, 0.40468335, 0.72886939], [0.72510386, 0.51747824, 0.09126795]], [[0.90745723, 0.10949747, 0.83691823], [0.00673766, 0.67130082, 0.2929917]], [[0.53837861, 0.35067182, 0.49911924], [0.06630258, 0.1412144, 0.48064866]], [[0.34406119, 0.11874421, 0.55135803], [0.36967602, 0.50719181, 0.15817044]], [[0.68399463, 0.81038647, 0.56977309], [0.88117322, 0.77745139, 0.3907355]]]\n"
      ]
     }
    ],
    "source": [
-    "p = []\n",
-    "for i in range(5):\n",
-    "    q = []\n",
-    "    for j in range(2):\n",
-    "        r =[]\n",
-    "        for k in range(3):\n",
-    "            r.append(round(random.random(),8))\n",
-    "    \n",
-    "p.append(q.append(r))\n",
-    "\n",
-    "print(p)"
+    "p = [[[round(random.random(),8) for i in range(3)] for i in range(2)] for i in range(5)]\n",
+    "print(p)     "
    ]
   },
   {
@@ -233,12 +231,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.201566, 0.201566, 0.201566], [0.201566, 0.201566, 0.201566]], [[0.201566, 0.201566, 0.201566], [0.201566, 0.201566, 0.201566]], [[0.201566, 0.201566, 0.201566], [0.201566, 0.201566, 0.201566]], [[0.201566, 0.201566, 0.201566], [0.201566, 0.201566, 0.201566]], [[0.201566, 0.201566, 0.201566], [0.201566, 0.201566, 0.201566]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "p = []\n",
+    "for i in range(5):\n",
+    "    q = []\n",
+    "    for j in range(2):\n",
+    "        r = []\n",
+    "        for k in range(3):\n",
+    "            c = round(random.random(),8)\n",
+    "            if c >= 0.5:\n",
+    "                r.append(c)\n",
+    "                q.append(r)\n",
+    "                p.append(q)\n",
+    "'''\n",
+    "c = (round(random.random(),8))\n",
+    "p = [[[c for j in range(3) if c <= 0.5]for j in range(2)]for i in range(5)]\n",
+    "print(p)"
+   ]
   },
   {
    "cell_type": "markdown",
