--- a/module-1/lab-bag-of-words/your-code/main.ipynb
+++ b/module-1/lab-bag-of-words/your-code/main.ipynb
@@ -9,8 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']"
@@ -25,13 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "corpus = []\n",
-    "\n",
-    "# Write your code here"
+    "for i in docs:\n",
+    "    with open (i) as file:\n",
+    "        data = file.read()\n",
+    "        corpus.append(data.lower().replace('.',''))"
    ]
   },
   {
@@ -43,10 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,13 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['ironhack', 'is', 'cool'], ['i', 'love', 'ironhack'], ['i', 'am', 'a', 'student', 'at', 'ironhack']]\n"
+     ]
+    }
+   ],
    "source": [
-    "bag_of_words = []\n",
-    "\n",
-    "# Write your code here"
+    "prueba = [i.split() for i in corpus]\n",
+    "bag_of_words = [o for e in prueba for o in e]     \n",
+    "bag_of_words = list(set(bag_of_words))\n",
+    "print(prueba)"
    ]
   },
   {
@@ -104,10 +133,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['is', 'i', 'a', 'student', 'love', 'cool', 'am', 'ironhack', 'at']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bag_of_words)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ironhack is cool\n",
+      "i love ironhack\n",
+      "i am a student at ironhack\n",
+      "is\n",
+      "i\n",
+      "a\n",
+      "student\n",
+      "love\n",
+      "cool\n",
+      "am\n",
+      "ironhack\n",
+      "at\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in corpus:\n",
+    "    print(c)\n",
+    "for b in bag_of_words:\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "term_freq = []\n",
+    "y = []\n",
+    "if bag_of_words[0] in 'ironhack is cool':\n",
+    "    x += 1\n",
+    "else:\n",
+    "    x = 0\n",
+    "    \n",
+    "term_freq"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,13 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "term_freq = []\n",
-    "\n",
-    "# Write your code here"
+    "x = []\n",
+    "for c in corpus:\n",
+    "    for b in bag_of_words:\n",
+    "        if b in c:\n",
+    "            x.append(1)\n",
+    "        else:\n",
+    "            x.append(0)\n",
+    "    term_freq.append(x)\n",
+    "            "
    ]
   },
   {
@@ -139,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -169,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
