--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,32 +21,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "num=76"
+    "num=5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
-    "    # Your code here: "
+    "    # Your code here: \n",
+    "    l = list(range(1,(num+1)))\n",
+    "    x = 0\n",
+    "    for i in l:\n",
+    "        x += i\n",
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "# print summation"
+    "# print summation\n",
+    "summation(num)"
    ]
   },
   {
@@ -60,8 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "array=[3, 8, 16]"
@@ -69,23 +91,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(args)\n",
+    "# Your code here:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print summation2"
+    "# print summation2\n",
+    "summation2(*array)"
    ]
   },
   {
@@ -97,23 +135,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return a+b+c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print summation3"
+    "# print summation3\n",
+    "summation3(*array)"
    ]
   },
   {
@@ -125,8 +179,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dictionary={'red':3, 'blue':8, 'green':24, 'orange':12, 'purple':10}"
@@ -134,23 +190,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    x = []\n",
+    "    for i in kwargs:\n",
+    "        if k != 'red':\n",
+    "            x.append(dictionary[k])\n",
+    "    return sum(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print summation4"
+    "# print summation4\n",
+    "summation4(**dictionary)"
    ]
   },
   {
@@ -162,8 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a=4\n",
@@ -175,23 +254,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def summation5('define the function input'):\n",
+    "def summation5(a,b,c,A,B,C):\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    \n",
+    "    return a+b+c+A+B+C"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "137"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print summation5"
+    "# print summation5\n",
+    "summation5(a,b,c,**e)"
    ]
   },
   {
@@ -205,9 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# We first define our iterator:\n",
     "\n",
@@ -220,9 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# We continue to iterate through the iterator.\n",
     "\n",
@@ -231,18 +348,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(next(iterator))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-101-9c95d1191970>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# After we have iterated through all elements, we will get a StopIteration Error\n",
     "\n",
@@ -251,9 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -274,9 +425,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "iterator=iter([1,2,3])\n",
     "\n",
@@ -288,16 +451,50 @@
     "    # Sample Input: iter([1,2,3])\n",
     "    # Sample Output: 2\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    for i in iterator:\n",
+    "        if i%2 == 0:\n",
+    "            print(i)\n",
+    "        else:\n",
+    "            print(0)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in iter([1,2,3]):\n",
+    "    if i%2 =0:\n",
+    "        return i\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# print divisible2"
+    "# print divisible2\n",
+    "divisible2(iterator)"
    ]
   },
   {
@@ -311,8 +508,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def firstn(n):\n",
@@ -331,14 +530,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "iterator = firstn(5)\n",
     "\n",
     "for i in iterator:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object firstn at 0x10b54c468>"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iterator = firstn(5)\n",
+    "iterator"
    ]
   },
   {
@@ -350,14 +586,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def even_iterator(n):\n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
     "    # Input: integer\n",
     "    # Output: iterator\n",
+    "    number = 0\n",
+    "    l = []\n",
+    "    while number < n:\n",
+    "        yield number\n",
+    "        number = number + 1\n",
+    "        for i in number:\n",
+    "            if i%2 == 0:\n",
+    "                l.append(i)\n",
+    "    print(l)\n",
     "    \n",
     "    # Sample Input: 5\n",
     "    # Sample Output: iter([0, 2, 4])"
@@ -365,17 +612,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object even_iterator at 0x10b5014c0>"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print even_iterator"
+    "# print even_iterator\n",
+    "even_iterator(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -396,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
